--- a/paper/sections/05-design-framework.tex
+++ b/paper/sections/05-design-framework.tex
@@ -23,6 +23,8 @@ The accessibility framework includes specific provisions for screen reader compa
 
 Motor accessibility considerations include minimum touch target sizes of 44 by 44 pixels for mobile interfaces, adequate spacing between interactive elements, and support for alternative input methods. The framework accommodates users who may have difficulty with precise pointer control by implementing forgiving interaction zones and providing alternative interaction methods where appropriate.
 
+In alignment with Universal Design for Learning (UDL), MicroSims provide multiple means of engagement, representation, and expression through multimodal interfaces and adaptable user controls. This framework ensures that diverse learners can access content through their preferred modalities, engage with materials in ways that maintain motivation and interest, and demonstrate understanding through varied interaction patterns. The responsive design and flexible interface elements inherently support UDL principles by enabling personalization and adaptability across different learning contexts and individual needs.
+
 \subsubsection{Standards-Based Development}
 
 The MicroSims framework adheres to web standards and best practices, ensuring long-term compatibility and interoperability across different platforms and technologies. All simulations are implemented using standard HTML5, CSS3, and JavaScript technologies without proprietary extensions or vendor-specific features. This standards-based approach ensures that MicroSims remain functional across different web browsers and can be easily maintained as web technologies evolve.
@@ -47,11 +49,17 @@ Intrinsic cognitive load is managed through careful selection of simulation comp
 
 Germane cognitive load is optimized through design patterns that encourage schema construction and knowledge transfer. The framework promotes the use of analogies, real-world connections, and cross-simulation consistency that support broader conceptual understanding.
 
+MicroSims intentionally guide learners through a semantic wave---unpacking abstract concepts into tangible, interactive experiences, and then repacking them into generalized understanding. This pedagogical pattern signals that MicroSims don't just entertain---they develop conceptual transfer by moving learners between concrete manipulation and abstract reasoning. The interactive nature of simulations enables this wave-like progression, where students ground abstract principles in observable phenomena before reconstructing more sophisticated conceptual frameworks that transcend specific examples.
+
 \subsubsection{Adaptive Learning Support}
 
 The framework incorporates provisions for adaptive learning experiences that can adjust to individual student needs and preferences. Standardized data collection protocols capture detailed interaction logs that can inform adaptive algorithms about student understanding, engagement levels, and learning preferences. This data enables intelligent tutoring systems to make informed decisions about content sequencing, difficulty adjustment, and intervention timing.
 
 Personalization features include adjustable complexity levels, alternative representation modes, and customizable interface preferences. The framework supports multiple learning modalities through coordinated visual, auditory, and kinesthetic interaction options. The adaptive framework includes provisions for real-time difficulty adjustment based on student performance indicators.
+
+\subsubsection{PRIMM Methodology Integration}
+
+The MicroSims framework brings the principles of constructivist learning theory to life by guiding students through a structured, hands-on progression modeled after the PRIMM methodology---Predict, Run, Investigate, Modify, and Make. In each MicroSim, learners begin by predicting what they think will happen in a dynamic simulation, then run the interactive model to observe real outcomes. They investigate relationships between variables, experiment by modifying parameters or code, and finally make their own versions or extensions of the simulation. This cycle promotes active engagement, conceptual understanding, and creative confidence, helping learners move from passive observation to authentic construction of knowledge through experimentation and iteration. The PRIMM framework aligns naturally with the MicroSims architecture, where transparent code, modifiable parameters, and extensible designs explicitly support this progression from prediction through creation.
 
 \subsection{Implementation Standards and Guidelines}
 
