--- a/paper/sections/references.bib
+++ b/paper/sections/references.bib
@@ -171,11 +171,19 @@
   url = {http://ccl.northwestern.edu/netlogo/}
 }
 
-% Learning Management Systems
+% Learning Management Systems and Standards
 @misc{lms2023,
   title = {Learning Management Systems in Higher Education},
   year = {2023},
   note = {Industry report on LMS adoption and usage}
+}
+
+@misc{xapi2024,
+  author = {{Advanced Distributed Learning (ADL) Initiative}},
+  title = {Experience {API} ({xAPI}) Specification},
+  year = {2024},
+  url = {https://github.com/adlnet/xAPI-Spec},
+  note = {Version 1.0.3. Learning technology specification for tracking and analyzing learning experiences}
 }
 
 % Khan Academy and AI Education
