--- a/paper/main.tex
+++ b/paper/main.tex
@@ -50,18 +50,17 @@
 
 \author{
     Valerie Lockhart \\
-    \texttt{valockhart@gmail.com}
+    \texttt{https://www.linkedin.com/in/valockhart/}
     % Add additional authors and affiliations as needed
     \and
     Dan McCreary \\
-    \texttt{dan.mccreary@gmail.com}
+    \texttt{https://www.linkedin.com/in/danmccreary/}
     \and
     Troy A. Peterson \\
-    \texttt{troy@mtn.org}
+    \texttt{https://www.linkedin.com/in/troyapeterson/}
 }
 
-
-\date{\today}
+\date{Version 0.05 \\ \today}
 
 \begin{document}
 
