--- a/paper/sections/02-introduction.tex
+++ b/paper/sections/02-introduction.tex
@@ -36,6 +36,8 @@ This paper introduces \textit{MicroSims}: a comprehensive framework for creating
 \item \textbf{AI Generation}: Standardized design patterns and documented best practices that enable rapid creation and iterative refinement through large language models
 \end{enumerate}
 
+A collection of over 100 MicroSim examples demonstrating these principles across diverse subject areas is available at \url{https://dmccreary.github.io/microsims/} \cite{microsims2024}.
+
 \subsection{Research Contributions}
 
 This work makes several distinct contributions to the fields of educational technology and computer-supported collaborative learning:
