--- a/paper/sections/03-related-work.tex
+++ b/paper/sections/03-related-work.tex
@@ -19,7 +19,7 @@ However, these platforms are characterized by several limitations that MicroSims
 
 The interactive textbook market has evolved considerably, with platforms such as Pearson MyLab, McGraw-Hill Connect, and Wiley WileyPLUS offering multimedia-enhanced learning experiences. However, these platforms typically employ pre-authored interactive elements that cannot be easily modified or extended by individual educators.
 
-MicroSims fundamentally differ by providing a \textit{generative} approach to interactive content creation, where simulations are produced on-demand to address specific pedagogical requirements. Furthermore, commercial interactive textbook platforms operate under proprietary licensing models that limit institutional flexibility and long-term sustainability. MicroSims generate open-source code that institutions can freely modify, redistribute, and maintain independently.
+MicroSims fundamentally differ by providing a \textit{generative} approach to interactive content creation, where simulations are produced on-demand to address specific pedagogical requirements. Furthermore, commercial interactive textbook platforms operate under proprietary licensing models that limit institutional flexibility and long-term sustainability. We recommend that MicroSims generate source code licensed under a Creative Commons Sharealike Attribution Non-commercial license that institutions can freely modify, redistribute, and maintain independently.  We request that organizations that reuse MicroSims give the original authors attribution and we suggest that authors retain the copyright to their MicroSims and restrict the ability to resell MicroSims.
 
 \subsection{Learning Management Systems}
 
