--- a/paper/sections/references.bib
+++ b/paper/sections/references.bib
@@ -62,6 +62,14 @@
   note = {Accessed: 2024-01-15}
 }
 
+@misc{microsims2024,
+  author = {McCreary, Dan and Lockhart, Valerie and Peterson, Troy A.},
+  title = {{MicroSims}: Educational Simulations Library},
+  year = {2024},
+  url = {https://dmccreary.github.io/microsims/},
+  note = {Collection of 100+ interactive educational simulations demonstrating the framework principles}
+}
+
 % Meta-Analyses and Reviews
 @techreport{dangelo2014simulations,
   author = {D'Angelo, Cynthia and Rutstein, Daisy and Harris, Christopher and Bernard, Robert and Borokhovski, Eugen and Haertel, Geneva},
