--- a/paper/sections/05-design-framework.tex
+++ b/paper/sections/05-design-framework.tex
@@ -59,7 +59,7 @@ Personalization features include adjustable complexity levels, alternative repre
 
 \subsubsection{PRIMM Methodology Integration}
 
-The MicroSims framework brings the principles of constructivist learning theory to life by guiding students through a structured, hands-on progression modeled after the PRIMM methodology---Predict, Run, Investigate, Modify, and Make. In each MicroSim, learners begin by predicting what they think will happen in a dynamic simulation, then run the interactive model to observe real outcomes. They investigate relationships between variables, experiment by modifying parameters or code, and finally make their own versions or extensions of the simulation. This cycle promotes active engagement, conceptual understanding, and creative confidence, helping learners move from passive observation to authentic construction of knowledge through experimentation and iteration. The PRIMM framework aligns naturally with the MicroSims architecture, where transparent code, modifiable parameters, and extensible designs explicitly support this progression from prediction through creation.
+The MicroSims framework brings the principles of constructivist learning theory to life by guiding students through a structured, hands-on progression modeled after the PRIMM methodology---Predict, Run, Investigate, Modify, and Make. In the automatically generated lesson plan for each MicroSim, learners begin by predicting what they think will happen in a dynamic simulation, then run the interactive model to observe real outcomes. They investigate relationships between variables, experiment by modifying parameters using buttons and slider controls, and if they have access to the right tools, they can generate their own versions or extensions of the simulation. This cycle promotes active engagement, conceptual understanding, and creative confidence, helping learners move from passive observation to authentic construction of knowledge through experimentation and iteration. The PRIMM framework aligns naturally with the MicroSims architecture, where transparent code, modifiable parameters, and extensible designs explicitly support this progression from prediction through creation.
 
 \subsection{Implementation Standards and Guidelines}
 
